--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>My Tech Goals for the Next 2 Years</h1>
     </header>
     <section id="profile">
-        <h2>Little About</h2>
+        <h2>Profile</h2>
         <img src="https://ca.slack-edge.com/T07466B189M-U07AHBVBXQ9-741edf421edc-48" alt="Slack Profile Picture" data-testid="slackProfilePicture">
         <p data-testid="slackDisplayName">Hi I'm Amaka</p>
         <p data-testid="slackEmail">chiamakahj2@gmail.com</p>
